# imagegenskill

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  QUICKSTART.md  README.md  main.cpp  pyproject.toml  resources.qrc  test_mainwindow.cpp
PRPs/: imagen-skill-implementation.md  imagen-skill-prd-v2.md
PRPs/ai_docs/: code_parsing_patterns.md  gemini_api_patterns.md  qt_resource_system.md
PRPs/code_reviews/: review1.md
PRPs/scripts/: prp_runner.py
src/imagen_skill/: __init__.py  exceptions.py  main.py  types.py
src/imagen_skill/analyzers/: __init__.py  code_analyzer.py  theme_analyzer.py
src/imagen_skill/analyzers/parsers/: __init__.py  base.py  patterns.py  qt_parser.py
src/imagen_skill/core/: __init__.py  config.py  models.py  skill.py
src/imagen_skill/generators/: __init__.py  background_remover.py  image_generator.py  prompt_builder.py
src/imagen_skill/integrators/: __init__.py  asset_manager.py  code_integrator.py
src/imagen_skill/integrators/frameworks/: __init__.py  base.py  qt_integrator.py
src/imagen_skill/services/: __init__.py  gemini_client.py
src/imagen_skill/utils/: file_utils.py  logging.py
tests/: __init__.py  conftest.py
